# pdf-something

./: *shell*  .gitignore  .projectile  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  TODO  TODO.org  cmake_install.cmake  compile_commands.json
backend/: .#window_split_screen.cpp  CMakeLists.txt  Makefile  backend.hpp  cmake_install.cmake  color.cpp  color.hpp  constants.hpp  datetime.cpp  datetime.hpp  document.cpp  document.hpp  eer.graphml  grid_layout.cpp  grid_layout.hpp  highlighting.cpp  highlighting.hpp  history.cpp  history.hpp  image_document.hpp  monitor.cpp  monitor.hpp  pdf_document.cpp  pdf_document.hpp  pdf_page.cpp  pdf_page.hpp  timer.hpp  uuid.cpp  uuid.hpp  virtual_screen.cpp  virtual_screen.hpp  window.cpp  window.hpp  window_layout.cpp  window_layout.hpp  window_split_screen.cpp  window_split_screen.hpp  windows_configuration.cpp  windows_configuration.hpp
backend/database/: CMakeLists.txt  asynchronous_loader.hpp  database.cpp  database.hpp  mediator.cpp  mediator.hpp  resources_manager.cpp  resources_manager.hpp
backend/io/: file.hpp
frontends/canonical/: .#main.cpp  CMakeLists.txt  Makefile  README.txt  canonical-frontend  cmake_install.cmake  main.cpp  output.html  put_into_html_body.sh  run.sh
frontends/canonical/backend_implementations/: README.md  canonical_window_layout.cpp
frontends/canonical/backend_implementations/io/: CMakeLists.txt  canonical_file.cpp
frontends/canonical/canonical.xcodeproj/: project.pbxproj
frontends/canonical/canonical.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
frontends/canonical/data/: latest.json  latest_bigger.json
frontends/canonical/data/18ae30d9-d28b-4a1b-992f-ea8882b1dafb/: info.json
frontends/canonical/data/21fe1c59-47a4-4ade-afd2-935c76fdec9b/: info.json
frontends/canonical/data/42f0601e-b05b-4851-bfc5-e650ed17fd83/: info.json
tests/: Makefile  (+1 more)
(+40 files in other folders)
